# guide_stat_reports

./: Makefile  README.md  Report.pm  all_plot_report.html  fit.py  folder.php  get_binned_data.py  get_month_bin_data.py  get_stats.cgi  gui_stat_reports.py  gui_summarize.py  index.php  make_binned_fit.py  make_likelihood_fit.py  make_plots.pl  make_report.pl  make_summary.pl  make_toc.pl  plots.yaml  pyproject.toml  report.html  report.yaml  report_template.txt  review_guide_frac_for_limit.ipynb  ruff.toml  show_month_stats.cgi  standard_report.html  task_schedule.cfg
guide_stat_reports/: gui_stat_reports.py  gui_summarize.py  task_schedule.cfg  toc.py
guide_stat_reports/data/: bad_trak_fitfile.json  no_trak_fitfile.json  obc_bad_fitfile.json
guide_stat_reports/templates/guide_stats/: index.html  summary.html  toc.html
old_/: get_month_bin_data.py  get_stats.cgi  guide_stat_web_query.cgi  report.yaml
templates/: index.html  stars.html
